Fixes for Portfolio Page Horizontal Alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,11 @@ h1 {
 h2, h3 { font-size: 22px; }
 h6 { font-size: 22px; font-weight: 700; color: #ffffff; text-align: center; line-height: 4px; position: static; }
 
+/* img {
+    width: 100%;
+    height: 100%;
+} */
+
 /* Header */
 header {
     background-color : #ffffff;
@@ -76,45 +81,62 @@ main { background-color: #cccccc; border-color: #dddddd; height: auto; }
 #Contact { clear: both; background-color: #ffffff; border-color: #dddddd; float : left; width:60%; max-width:650px; margin: 6px; padding: 3px; }
 
 /* Portfolio */
+#MyWordPressSite-picture {height: 66%; width: 33%; vertical-align: top; }
+#SubArcCellWelder-picture {height: 50%; width: 50%;}
+#PGC5000-picture {height: 50%; width: 50%; }
 #PPA_Batch-picture {height: 75%; width: 75%; }
+#OlympicMan-picture {height: 66%; width: 33%; vertical-align: top; }
+#Crystals-picture { height: 66%; width: 33%; vertical-align: top; }
 
 .personal {
     position: relative;
-    width: 500px;
-    max-width: 500px;
-    max-height: 500px;
-    min-width: 75px;
+    width: 75px;
+    max-width: 150px;
+    max-height: 75px;
+    min-width: 150px;
     min-height: 75px;
-    margin: 20px 0 25px;
+    margin: 10px 15px;
     overflow: auto;
 }
 .web-dev {
-    display: flex-inline;
-    flex-wrap: auto;
+    display: inline-flex;
+    flex-wrap: wrap;
     align-items: flex-start;
 }
 .web-dev-item {
     position: relative;
-    width: 500px;
-    max-width: 500px;
-    max-height: 500px;
-    min-width: 75px;
+    width: 75px;
+    max-width: 150px;
+    max-height: 75px;
+    min-width: 150px;
     min-height: 75px;
-    margin: 20px 0 25px;
+    margin: 10px 15px;
+    border: 0px;
     overflow: auto;
 }
 .work:nth-child(even) {
     margin-right: 40px;
 }
-.work .personal img {
+.work .personal {
     width: 100%;
     border: 0 none;
     opacity: 0.8;
 }
-.industrial {
+.ind-dev {
     clear: both;
+    display: inline-flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
 }
-
+.ind-dev-item {
+    width: 175px;
+    max-width: 175px;
+    max-height: 175px;
+    min-width: 175px;
+    margin: 20px 25px;
+    border: 0px;
+    overflow: auto;
+}
 /* Contact */
 #contact-name { display: block; width: 100%; }
 #contact-email {display: block; width: 100%;}
